# modern-todo

./: LICENSE  README.md
backend/: .gitignore  pyproject.toml
backend/app/: main.py
backend/app/database/: __init__.py  db.py
backend/app/models/: __init__.py  base.py  todo.py  user.py
backend/app/routes/: __init__.py  auth.py  todo.py
backend/app/schemas/: __init__.py  auth.py  todo.py
backend/app/services/: __init__.py  auth.py  todo.py
frontend/: package.json  pnpm-lock.yaml  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/components/layout/: AppLayout.tsx
frontend/src/components/todos/: CreateTodoDialog.tsx  TodoCard.tsx
frontend/src/components/ui/: form.tsx
frontend/src/hooks/: auth.ts  todos.ts
frontend/src/lib/: api.ts  types.ts
frontend/src/pages/: DashboardPage.tsx  DueSoonPage.tsx  LoginPage.tsx  OverduePage.tsx  ProfilePage.tsx  RegisterPage.tsx  StatsPage.tsx  TodosPage.tsx
